--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage": "^1.1.2",
+    "karma-htmlfile-reporter": "^0.3.7",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.3.1",
     "karma-phantomjs-launcher": "^1.0.2",
