--- a/app-config.json
+++ b/app-config.json
@@ -9,7 +9,8 @@
         "appSpecTsConfig": "tsconfig.spec.json",
         "reportsDir": "reports",
         "assetsDir": "assets",
-        "tasksDir": "tasks"
+        "tasksDir": "tasks",
+        "tempDir": "tmp"
     },
     "banner": {
         "content": ["Hello",
@@ -38,11 +39,17 @@
             "coberturaFileName": "cobertura.xml",
             "lcovonlyFileName": "lcovonly.txt"
         },
-        "e2e": {},
+        "e2e": {
+            "specFile": "e2e/**/*.e2e.ts",
+            "htmlReportFileName": "app.e2e",
+            "configFile": "protractor.conf.js",
+            "junitFilePrefix": "app-junit-e2e-",
+            "tsConfigFile": "tsconfig.e2e.json"
+        },
         "junit": {
             "frameworks": ["jasmine"],
             "browsers": ["Chrome"],
-            "reporters": ["kjhtml", "html", "coverage", "remap-coverage"],
+            "reporters": ["mocha", "kjhtml", "html", "coverage", "remap-coverage"],
             "preprocessors": ["webpack", "sourcemap", "coverage"],
             "port": 9876,
             "singleRun": true,
