--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "eslint": "^5.6.0",
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
+    "find": "^0.2.9",
+    "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-protractor": "^4.1.0",
@@ -77,13 +79,13 @@
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
-    "lodash": "^4.16.2",
     "node-sass": "^4.9.3",
     "opn": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.4.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
+    "socket.io": "^2.1.1",
     "style-loader": "^0.23.0",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
@@ -92,6 +94,7 @@
     "tslint": "^5.11.0",
     "tslint-webpack-plugin": "^1.2.2",
     "typescript": "^3.0.3",
+    "webdriver-manager": "^12.1.0",
     "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-chunk-hash": "^0.6.0",
