--- a/package.json
+++ b/package.json
@@ -9,37 +9,36 @@
     "serve": "set NODE_ENV=dev && webpack-dev-server --color --mode development"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@angular/upgrade": "^6.0.0",
-    "angular-in-memory-web-api": "^0.6.0",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
+    "@angular/upgrade": "^7.0.0",
+    "angular-in-memory-web-api": "^0.6.1",
+    "core-js": "^2.5.7",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.24"
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.3",
-    "@angular/cli": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/platform-server": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.10.1",
+    "@angular/cli": "^7.0.1",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/platform-server": "^7.0.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
-    "@ngtools/webpack": "^6.2.4",
-    "@types/jasmine": "~2.8.0",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.11.0",
-    "@types/webpack": "^4.4.12",
+    "@types/jasmine": "~2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "@types/node": "^10.12.0",
+    "@types/webpack": "^4.4.17",
     "@types/webpack-env": "^1.13.6",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
@@ -50,18 +49,19 @@
     "chunk-manifest-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.19",
     "codelyzer": "^4.5.0",
-    "commander": "^2.18.0",
+    "commander": "^2.19.0",
     "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
     "ejs-loader": "^0.3.1",
-    "eslint": "^5.6.0",
-    "express": "^4.16.3",
+    "eslint": "^5.7.0",
+    "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "find": "^0.2.9",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-hub": "github:frankwallis/gulp-hub#registry-init",
     "gulp-protractor": "^4.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
@@ -73,34 +73,35 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-htmlfile-reporter": "^0.3.7",
-    "karma-jasmine": "~1.1.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.9.4",
     "opn": "^5.4.0",
-    "phantomjs-prebuilt": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.16",
+    "promise": "^8.0.2",
     "protractor": "~5.4.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
-    "style-loader": "^0.23.0",
+    "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^5.2.1",
+    "ts-loader": "^5.2.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-webpack-plugin": "^1.2.2",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.3",
     "webdriver-manager": "^12.1.0",
-    "webpack": "^4.19.1",
-    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack": "^4.21.0",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-chunk-hash": "^0.6.0",
-    "webpack-cli": "^3.1.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.2",
+    "webpack-hot-middleware": "^2.24.3",
     "webpack-livereload-plugin": "^2.1.1",
     "webpack-merge": "^4.1.4"
   },
