--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-    "presets": ["@babel/preset-env"],
-    "retainLines": true
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "edge": "17",
+                    "firefox": "60",
+                    "chrome": "67",
+                    "safari": "11.1"
+                },
+                "useBuiltIns": "usage"
+            }
+        ]
+    ]
 }
