--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "@angular/upgrade": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "angular-in-memory-web-api": "^0.6.1",
     "core-js": "^2.5.7",
     "lodash": "^4.17.11",
@@ -28,9 +29,6 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.1",
-    "@angular/cli": "^7.0.1",
-    "@angular/compiler-cli": "^7.0.0",
     "@angular/platform-server": "^7.0.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
@@ -61,7 +59,7 @@
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-hub": "github:frankwallis/gulp-hub#registry-init",
+    "gulp-cli": "^2.0.1",
     "gulp-protractor": "^4.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
@@ -79,6 +77,7 @@
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
+    "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "opn": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.16",
