--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.0.1",
+    "gulp-eslint": "^5.0.0",
     "gulp-protractor": "^4.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
