--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-cli": "^2.0.1",
     "gulp-eslint": "^5.0.0",
     "gulp-protractor": "^4.1.0",
+    "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -79,6 +80,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.4.4",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.9.4",
     "opn": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.16",
