--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "~3.2.1",
+    "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -86,7 +87,9 @@
     "phantomjs-prebuilt": "^2.1.16",
     "promise": "^8.0.2",
     "protractor": "~5.4.1",
+    "protractor-beautiful-reporter": "^1.2.5",
     "raw-loader": "^0.5.1",
+    "reflect-metadata": "^0.1.12",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
     "style-loader": "^0.23.1",
