--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
+    "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.7.0",
     "express": "^4.16.4",
