--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -7,7 +7,7 @@
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "es6",
         "moduleResolution": "node",
         "target": "es5",
