--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/router": "^7.0.0",
     "@angular/upgrade": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^6.2.6",
     "angular-in-memory-web-api": "^0.6.1",
+    "angular5-csv": "^0.2.10",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.7",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
@@ -29,10 +34,16 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-optimizer": "^0.10.3",
+    "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.1",
+    "@angular/language-service": "^7.0.1",
     "@angular/platform-server": "^7.0.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
+    "@ngtools/webpack": "^7.0.3",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.0",
@@ -86,6 +97,7 @@
     "node-sass": "^4.9.4",
     "opn": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.16",
+    "postcss-loader": "^3.0.0",
     "promise": "^8.0.2",
     "protractor": "~5.4.1",
     "protractor-beautiful-reporter": "^1.2.5",
