--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@angular/compiler-cli": "^7.0.1",
     "@angular/language-service": "^7.0.1",
     "@angular/platform-server": "^7.0.0",
+    "@angularclass/hmr": "^2.1.3",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@ngtools/webpack": "^7.0.3",
     "@types/hammerjs": "^2.0.36",
+    "@types/hard-source-webpack-plugin": "^0.9.0",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.0",
@@ -76,6 +78,7 @@
     "gulp-protractor": "^4.1.0",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "hard-source-webpack-plugin": "^0.12.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
