--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,7 +2,7 @@
     "extends": "../config/tsconfig.json",
     "compilerOptions": {
         "outDir": "../dist/tsc/app",
-        "baseUrl": "./",
+        "baseUrl": "",
         "module": "es2015",
     },
     "exclude": [
