--- a/app-config.json
+++ b/app-config.json
@@ -35,7 +35,7 @@
     },
     "bundle": {
         "jsPattern": "js/[name].[hash:8].js",
-        "cssPattern": "css/[name].[hash:8].css"
+        "cssPattern": "css/[name].[contenthash:8].css"
     },
     "lint": {
         "report": {
