--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@babel/polyfill": "^7.0.0",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^6.2.6",
-    "angular-in-memory-web-api": "^0.6.1",
+    "angular-in-memory-web-api": "^0.7.0",
     "angular5-csv": "^0.2.10",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.7",
@@ -52,6 +52,7 @@
     "@types/webpack": "^4.4.17",
     "@types/webpack-env": "^1.13.6",
     "angular2-template-loader": "^0.6.2",
+    "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
     "babelify": "^10.0.0",
@@ -68,6 +69,7 @@
     "ejs-loader": "^0.3.1",
     "eslint": "^5.7.0",
     "express": "^4.16.4",
+    "extract-css-chunks-webpack-plugin": "^3.2.1",
     "file-loader": "^2.0.0",
     "find": "^0.2.9",
     "glob": "^7.1.3",
@@ -82,10 +84,10 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "~3.2.1",
+    "jasmine-core": "~3.3.0",
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-htmlfile-reporter": "^0.3.7",
@@ -106,6 +108,7 @@
     "protractor-beautiful-reporter": "^1.2.5",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.12",
+    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
     "style-loader": "^0.23.1",
