--- a/package.json
+++ b/package.json
@@ -9,47 +9,50 @@
     "serve": "set NODE_ENV=dev && webpack-dev-server --color --mode development"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/http": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/router": "^7.0.0",
-    "@angular/upgrade": "^7.0.0",
+    "@angular-devkit/build-webpack": "^0.10.4",
+    "@angular/animations": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@angular/upgrade": "^7.0.2",
     "@babel/polyfill": "^7.0.0",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^6.2.6",
     "angular-in-memory-web-api": "^0.7.0",
     "angular5-csv": "^0.2.10",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
+    "moment-timezone": "^0.5.23",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.10.3",
-    "@angular/cli": "^7.0.3",
-    "@angular/compiler-cli": "^7.0.1",
-    "@angular/language-service": "^7.0.1",
-    "@angular/platform-server": "^7.0.0",
+    "@angular-devkit/build-optimizer": "^0.10.4",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
+    "@angular/platform-server": "^7.0.2",
     "@angularclass/hmr": "^2.1.3",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
-    "@ngtools/webpack": "^7.0.3",
+    "@ngtools/webpack": "^7.0.4",
     "@types/hammerjs": "^2.0.36",
     "@types/hard-source-webpack-plugin": "^0.9.0",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.12.0",
+    "@types/lodash": "^4.14.117",
+    "@types/node": "^10.12.2",
     "@types/webpack": "^4.4.17",
+    "@types/webpack-bundle-analyzer": "^2.13.0",
     "@types/webpack-env": "^1.13.6",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^9.3.1",
@@ -59,15 +62,16 @@
     "browserify": "^16.2.3",
     "chalk": "^2.4.1",
     "chunk-manifest-webpack-plugin": "^1.1.2",
+    "circular-dependency-plugin": "^5.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "codelyzer": "^4.5.0",
     "commander": "^2.19.0",
     "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
     "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "express": "^4.16.4",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "file-loader": "^2.0.0",
@@ -92,14 +96,14 @@
     "karma-coverage": "^1.1.2",
     "karma-htmlfile-reporter": "^0.3.7",
     "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.4.4",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "opn": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.16",
     "postcss-loader": "^3.0.0",
@@ -111,16 +115,17 @@
     "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^5.2.2",
+    "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-webpack-plugin": "^1.2.2",
-    "typescript": "^3.1.3",
+    "typescript": "^3.1.6",
     "webdriver-manager": "^12.1.0",
-    "webpack": "^4.21.0",
+    "webpack": "^4.24.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^3.1.2",
