--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.10.4",
-    "@angular/animations": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/router": "^7.0.2",
-    "@angular/upgrade": "^7.0.2",
+    "@angular/animations": "^7.0.3",
+    "@angular/common": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/forms": "^7.0.3",
+    "@angular/http": "^7.0.3",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/router": "^7.0.3",
+    "@angular/upgrade": "^7.0.3",
     "@babel/polyfill": "^7.0.0",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^6.2.6",
@@ -37,21 +37,21 @@
   "devDependencies": {
     "@angular-devkit/build-optimizer": "^0.10.4",
     "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
-    "@angular/platform-server": "^7.0.2",
+    "@angular/compiler-cli": "^7.0.3",
+    "@angular/language-service": "^7.0.3",
+    "@angular/platform-server": "^7.0.3",
     "@angularclass/hmr": "^2.1.3",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.5",
+    "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
     "@ngtools/webpack": "^7.0.4",
     "@types/hammerjs": "^2.0.36",
     "@types/hard-source-webpack-plugin": "^0.9.0",
-    "@types/jasmine": "~2.8.9",
-    "@types/jasminewd2": "^2.0.5",
-    "@types/lodash": "^4.14.117",
-    "@types/node": "^10.12.2",
-    "@types/webpack": "^4.4.17",
+    "@types/jasmine": "~2.8.11",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/lodash": "^4.14.118",
+    "@types/node": "^10.12.3",
+    "@types/webpack": "^4.4.18",
     "@types/webpack-bundle-analyzer": "^2.13.0",
     "@types/webpack-env": "^1.13.6",
     "angular2-template-loader": "^0.6.2",
@@ -69,11 +69,13 @@
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "css-to-string-loader": "^0.1.3",
     "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.8.0",
     "express": "^4.16.4",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
+    "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
     "find": "^0.2.9",
     "glob": "^7.1.3",
@@ -125,7 +127,7 @@
     "tslint-webpack-plugin": "^1.2.2",
     "typescript": "^3.1.6",
     "webdriver-manager": "^12.1.0",
-    "webpack": "^4.24.0",
+    "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^3.1.2",
