--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -19,5 +19,11 @@
         "typeRoots": [
             "../node_modules/@types"
         ],
+    },
+    "angularCompilerOptions": {
+        "fullTemplateTypeCheck": true,
+        "preserveWhitespaces": true,
+        "genDir": "../dist/aot",
+        "skipMetadataEmit": true
     }
 }
