--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/upgrade": "^7.0.3",
     "@babel/polyfill": "^7.0.0",
     "@types/chart.js": "^2.7.40",
+    "@types/reflect-metadata": "^0.1.0",
     "angular-bootstrap-md": "^6.2.6",
     "angular-in-memory-web-api": "^0.7.0",
     "angular5-csv": "^0.2.10",
@@ -35,7 +36,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.10.4",
+    "@angular-devkit/build-optimizer": "^0.10.5",
     "@angular/cli": "^7.0.4",
     "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "^7.0.3",
@@ -45,6 +46,7 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
     "@ngtools/webpack": "^7.0.4",
+    "@types/copy-webpack-plugin": "^4.4.2",
     "@types/hammerjs": "^2.0.36",
     "@types/hard-source-webpack-plugin": "^0.9.0",
     "@types/jasmine": "~2.8.11",
@@ -70,12 +72,15 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "css-to-string-loader": "^0.1.3",
+    "cssnano": "^4.1.7",
     "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.8.0",
+    "exports-loader": "^0.7.0",
     "express": "^4.16.4",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "extract-loader": "^3.0.0",
+    "fast-sass-loader": "^1.4.6",
     "file-loader": "^2.0.0",
     "find": "^0.2.9",
     "glob": "^7.1.3",
