--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/register": "^7.0.0",
     "@ngtools/webpack": "^7.0.4",
     "@types/copy-webpack-plugin": "^4.4.2",
+    "@types/extract-text-webpack-plugin": "^3.0.3",
     "@types/hammerjs": "^2.0.36",
     "@types/hard-source-webpack-plugin": "^0.9.0",
     "@types/jasmine": "~2.8.11",
@@ -80,6 +81,7 @@
     "express": "^4.16.4",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "extract-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fast-sass-loader": "^1.4.6",
     "file-loader": "^2.0.0",
     "find": "^0.2.9",
