--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dependencies": {
         "@angular/animations": "^7.0.3",
         "@angular/common": "^7.0.3",
-        "@angular/compiler": "^7.0.3",
         "@angular/core": "^7.0.3",
         "@angular/forms": "^7.0.3",
         "@angular/http": "^7.0.3",
@@ -31,8 +30,10 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
+        "@angular-devkit/build-angular": "^0.10.5",
         "@angular-devkit/build-optimizer": "^0.10.5",
         "@angular/cli": "^7.0.4",
+        "@angular/compiler": "^7.0.3",
         "@angular/compiler-cli": "^7.0.3",
         "@angular/language-service": "^7.0.3",
         "@angular/platform-server": "^7.0.3",
@@ -57,7 +58,6 @@
         "@types/webpack-env": "^1.13.6",
         "autoprefixer": "^9.3.1",
         "babel-loader": "^8.0.4",
-        "babelify": "^10.0.0",
         "chalk": "^2.4.1",
         "chunk-manifest-webpack-plugin": "^1.1.2",
         "circular-dependency-plugin": "^5.0.2",
@@ -66,6 +66,7 @@
         "commander": "^2.19.0",
         "compression-webpack-plugin": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^1.0.1",
         "cssnano": "^4.1.7",
         "del": "^3.0.0",
         "ejs-loader": "^0.3.1",
@@ -104,22 +105,22 @@
         "mkdirp": "^0.5.1",
         "node-sass": "^4.10.0",
         "opn": "^5.4.0",
-        "phantomjs-prebuilt": "^2.1.16",
         "postcss-loader": "^3.0.0",
         "promise": "^8.0.2",
         "protractor": "~5.4.1",
         "protractor-beautiful-reporter": "^1.2.5",
+        "raw-loader": "^0.5.1",
         "reflect-metadata": "^0.1.12",
         "sass-loader": "^7.1.0",
         "socket.io": "^2.1.1",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "to-string-loader": "^1.1.5",
-        "ts-helpers": "^1.1.2",
-        "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "tslint-webpack-plugin": "^1.2.2",
         "typescript": "^3.1.6",
+        "uglifyjs-webpack-plugin": "^2.0.1",
+        "url-loader": "^1.1.2",
         "webdriver-manager": "^12.1.0",
         "webpack": "^4.25.1",
         "webpack-bundle-analyzer": "^3.0.3",
