--- a/package.json
+++ b/package.json
@@ -31,12 +31,8 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.10.5",
-        "@angular-devkit/build-optimizer": "^0.10.5",
-        "@angular/cli": "^7.0.4",
         "@angular/compiler": "^7.0.3",
         "@angular/compiler-cli": "^7.0.3",
-        "@angular/language-service": "^7.0.3",
-        "@angular/platform-server": "^7.0.3",
         "@angularclass/hmr": "^2.1.3",
         "@babel/core": "^7.1.5",
         "@babel/polyfill": "^7.0.0",
@@ -66,6 +62,7 @@
         "commander": "^2.19.0",
         "compression-webpack-plugin": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
+        "css-hot-loader": "^1.4.2",
         "css-loader": "^1.0.1",
         "cssnano": "^4.1.7",
         "del": "^3.0.0",
@@ -105,6 +102,7 @@
         "mkdirp": "^0.5.1",
         "node-sass": "^4.10.0",
         "opn": "^5.4.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
         "postcss-loader": "^3.0.0",
         "promise": "^8.0.2",
         "protractor": "~5.4.1",
@@ -115,11 +113,11 @@
         "socket.io": "^2.1.1",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
+        "terser-webpack-plugin": "^1.1.0",
         "to-string-loader": "^1.1.5",
         "tslint": "^5.11.0",
         "tslint-webpack-plugin": "^1.2.2",
         "typescript": "^3.1.6",
-        "uglifyjs-webpack-plugin": "^2.0.1",
         "url-loader": "^1.1.2",
         "webdriver-manager": "^12.1.0",
         "webpack": "^4.25.1",
