--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@angular/compiler-cli": "^7.0.4",
         "@angularclass/hmr": "^2.1.3",
         "@babel/core": "^7.1.6",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
         "@babel/polyfill": "^7.0.0",
         "@babel/preset-env": "^7.1.6",
         "@babel/register": "^7.0.0",
@@ -69,7 +70,6 @@
         "ejs-loader": "^0.3.1",
         "eslint": "^5.9.0",
         "express": "^4.16.4",
-        "extract-css-chunks-webpack-plugin": "^3.2.1",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "fast-sass-loader": "^1.4.6",
         "file-loader": "^2.0.0",
@@ -104,6 +104,8 @@
         "node-sass": "^4.10.0",
         "opn": "^5.4.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "postcss-cssnext": "^3.1.0",
+        "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
         "promise": "^8.0.2",
         "protractor": "~5.4.1",
