--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
         ]
     ],
     "plugins": [
-        "@babel/plugin-proposal-object-rest-spread"
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
