--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
         "serve": "set NODE_ENV=dev && webpack-dev-server --color --mode development"
     },
     "dependencies": {
-        "@angular/animations": "^7.0.4",
-        "@angular/common": "^7.0.4",
-        "@angular/core": "^7.0.4",
-        "@angular/forms": "^7.0.4",
-        "@angular/http": "^7.0.4",
-        "@angular/platform-browser": "^7.0.4",
-        "@angular/platform-browser-dynamic": "^7.0.4",
-        "@angular/router": "^7.0.4",
-        "@angular/upgrade": "^7.0.4",
-        "angular-bootstrap-md": "^6.3.0",
+        "@angular/animations": "^7.1.2",
+        "@angular/common": "^7.1.2",
+        "@angular/core": "^7.1.2",
+        "@angular/forms": "^7.1.2",
+        "@angular/http": "^7.1.2",
+        "@angular/platform-browser": "^7.1.2",
+        "@angular/platform-browser-dynamic": "^7.1.2",
+        "@angular/router": "^7.1.2",
+        "@angular/upgrade": "^7.1.2",
+        "angular-bootstrap-md": "^7.0.0",
         "angular-in-memory-web-api": "^0.7.0",
         "chart.js": "^2.7.3",
-        "core-js": "^2.5.7",
+        "core-js": "^2.6.0",
         "hammerjs": "^2.0.8",
         "lodash": "^4.17.11",
         "moment": "^2.22.2",
@@ -30,30 +30,32 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.10.6",
-        "@angular/compiler": "^7.0.4",
-        "@angular/compiler-cli": "^7.0.4",
+        "@angular-devkit/build-angular": "^0.11.2",
+        "@angular/compiler": "^7.1.2",
+        "@angular/compiler-cli": "^7.1.2",
         "@angularclass/hmr": "^2.1.3",
-        "@babel/core": "^7.1.6",
-        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/core": "^7.2.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/polyfill": "^7.0.0",
-        "@babel/preset-env": "^7.1.6",
+        "@babel/preset-env": "^7.2.0",
         "@babel/register": "^7.0.0",
-        "@fortawesome/fontawesome-free": "^5.5.0",
-        "@ngtools/webpack": "^7.0.6",
-        "@types/chart.js": "^2.7.40",
+        "@fortawesome/fontawesome-free": "^5.6.0",
+        "@ngtools/webpack": "^7.1.2",
+        "@types/chart.js": "^2.7.41",
         "@types/copy-webpack-plugin": "^4.4.2",
         "@types/extract-text-webpack-plugin": "^3.0.3",
         "@types/hammerjs": "^2.0.36",
         "@types/hard-source-webpack-plugin": "^0.9.0",
-        "@types/jasmine": "~3.0.0",
+        "@types/jasmine": "~3.3.0",
         "@types/jasminewd2": "^2.0.6",
         "@types/lodash": "^4.14.118",
-        "@types/node": "^10.12.9",
-        "@types/webpack": "^4.4.19",
+        "@types/node": "^10.12.12",
+        "@types/webpack": "^4.4.20",
         "@types/webpack-bundle-analyzer": "^2.13.0",
         "@types/webpack-env": "^1.13.6",
-        "autoprefixer": "^9.3.1",
+        "angular-router-loader": "^0.8.5",
+        "autoprefixer": "^9.4.2",
         "babel-loader": "^8.0.4",
         "chalk": "^2.4.1",
         "chunk-manifest-webpack-plugin": "^1.1.2",
@@ -64,14 +66,12 @@
         "compression-webpack-plugin": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
         "css-hot-loader": "^1.4.2",
-        "css-loader": "^1.0.1",
-        "cssnano": "^4.1.7",
+        "css-loader": "^2.0.0",
         "del": "^3.0.0",
         "ejs-loader": "^0.3.1",
-        "eslint": "^5.9.0",
+        "eslint": "^5.10.0",
         "express": "^4.16.4",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "fast-sass-loader": "^1.4.6",
+        "fast-sass-loader": "^1.4.7",
         "file-loader": "^2.0.0",
         "find": "^0.2.9",
         "glob": "^7.1.3",
@@ -79,9 +79,9 @@
         "gulp-babel": "^8.0.0",
         "gulp-cli": "^2.0.1",
         "gulp-eslint": "^5.0.0",
-        "gulp-protractor": "^4.1.0",
+        "gulp-protractor": "^4.1.1",
         "gulp-tslint": "^8.1.3",
-        "gulp-typescript": "^5.0.0-alpha.3",
+        "gulp-typescript": "^5.0.0",
         "hard-source-webpack-plugin": "^0.12.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^4.0.0-beta.4",
@@ -89,7 +89,7 @@
         "jasmine-core": "~3.3.0",
         "jasmine-reporters": "^2.3.2",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.1.1",
+        "karma": "~3.1.3",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage": "^1.1.2",
         "karma-htmlfile-reporter": "^0.3.7",
@@ -99,9 +99,9 @@
         "karma-remap-coverage": "^0.1.5",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^3.0.5",
-        "mini-css-extract-plugin": "^0.4.4",
+        "mini-css-extract-plugin": "^0.5.0",
         "mkdirp": "^0.5.1",
-        "node-sass": "^4.10.0",
+        "node-sass": "^4.11.0",
         "opn": "^5.4.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "postcss-cssnext": "^3.1.0",
@@ -113,22 +113,23 @@
         "raw-loader": "^0.5.1",
         "reflect-metadata": "^0.1.12",
         "sass-loader": "^7.1.0",
-        "socket.io": "^2.1.1",
+        "socket.io": "^2.2.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "terser-webpack-plugin": "^1.1.0",
         "to-string-loader": "^1.1.5",
         "tslint": "^5.11.0",
-        "tslint-webpack-plugin": "^1.2.2",
-        "typescript": "^3.1.6",
+        "tslint-webpack-plugin": "^1.3.0",
+        "typescript": "^3.1.1",
         "url-loader": "^1.1.2",
         "webdriver-manager": "^12.1.0",
-        "webpack": "^4.25.1",
+        "webpack": "^4.27.1",
         "webpack-bundle-analyzer": "^3.0.3",
         "webpack-chunk-hash": "^0.6.0",
         "webpack-cli": "^3.1.2",
         "webpack-dev-middleware": "^3.4.0",
         "webpack-hot-middleware": "^2.24.3",
+        "webpack-livereload-plugin": "^2.1.1",
         "webpack-merge": "^4.1.4"
     },
     "author": "gm.jdev@gmail.com",
