--- a/app-config.json
+++ b/app-config.json
@@ -118,9 +118,10 @@
         "prod": "production"
     },
     "indexHtml": {
+        "favicon": "assets/images/favicon.ico",
         "templateFile": "index.tpl.ejs",
         "title": "Angular Webpack Demo",
-        "baseHref": "./images/",
+        "baseHref": "/",
         "metas": [{
                 "name": "Keywords",
                 "content": ["angular", "webpack", "css"]
